2011-01-17  Jarred Nicholls  <jarred@sencha.com>

Reviewed by Csaba Osztrogonác.

        REGRESSION(r75709): Return value of fscanf() shouldn't be ignored.
        https://bugs.webkit.org/show_bug.cgi?id=52585

        gcc 4.4.4+ has warn_unused_value attribute on fscanf, so we should check
        the return value to get around the gcc warning

        * jit/ExecutableAllocatorFixedVMPool.cpp:
        (JSC::maybeModifyVMPoolSize):

Canonical link: https://commits.webkit.org/66232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75992 268f45cc-cd09-0410-ab3c-d52691b4dbfc